# MockAPI

./: .gitignore  README.md  run.py  setup.cfg
app/: __about__.py  __init__.py
app/config/: default.py  development.py
app/data/: login.json  mock.json  register.json  reset.json
