[metadata]
name = MockApi
version = 0.0.1
url = https://github.com/amraneze/MockApi
license = MIT
maintainer = Ait Zeouay Amrane
maintainer_email = a.zeouayamran@gmail.com
description = A mock API for Web Apps.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr